# nx-simplemenu-applet

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  README.md  travis-build.sh
debian/: changelog  control  copyright
package/: metadata.desktop
package/contents/code/: tools.js
package/contents/config/: config.qml  main.xml
package/contents/ui/: ConfigGeneral.qml  ConfigGroups.qml  GroupSubMenu.qml  GroupingListModel.qml  ItemGridDelegate.qml  ItemGridView.qml  MenuRepresentation.qml  PagedListModel.qml  main.qml
plugin/: applicationsgroups.cpp  applicationsgroups.h  appsmodel.cpp  appsmodel.h  groupsmodel.cpp  groupsmodel.h  qmldir  rootmodel.cpp  rootmodel.h  simplemenuplugin.cpp
usr/share/doc/simplemenu/: copyright
